--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	  <title>Hi</title>
 	  <link rel="stylesheet" href="css/main.css" />
 	  <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-	  <script src="js/main.js"></script>
+	  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+	  <script src="js/main.js"></script> -->
 	</head>
 
 	<body>
