coming soon/change favicon

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		    <p>READY.</p> -->
 			<!-- <div class="img"><img src="/img/fb2.jpg" height="200px" width="200px" /></div> -->
 			<div class="info">
-				<h1 class="glitch" data-text="Sergey&nbsp;Rozhkov">Sergey&nbsp;Rozhkov<br></h1>
-				<div class="info_subtitle">dev/design/etc.</div>
+				<h1 class="glitch" data-text="Coming&nbsp;Soon">Coming&nbsp;Soon<br></h1>
+				<!-- <div class="info_subtitle">dev/design</div> -->
 				<div class="links">
 					<a href="mailto:rzkv@mail.ru" subject="Hi!">rzkv@mail.ru</a><br>
 					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside/</a><br>
