--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	  <meta charset="utf-8">
 	  <meta name="viewport" content="width=360px, initial-scale=1">
-	  <title>Hi</title>
+	  <title>Sergey Rozhkov Homepage</title>
 	  <link rel="stylesheet" href="css/main.css" />
 	  <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 	  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
