--- a/index.html
+++ b/index.html
@@ -18,16 +18,14 @@
 		    <p>READY.</p> -->
 			<!-- <div class="img"><img src="/img/fb2.jpg" height="200px" width="200px" /></div> -->
 			<div class="info">
-				<h1 class="glitch" data-text="Coming&nbsp;Soon">Coming&nbsp;Soon<br></h1>
+				<h1 class="glitch" data-text="HELLO">HELLO<br></h1>
 				<!-- <div class="info_subtitle">dev/design</div> -->
 				<div class="links">
-					<a href="mailto:rzkv@mail.ru" subject="Hi!">rzkv@mail.ru</a><br>
-					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside/</a><br>
-					<a href="http://instagram.com/ppcinside" target="_blank">instagram.com/ppcinside/</a><br>
-					<a href="http://last.fm/user/ppcinside" target="_blank">last.fm/user/ppcinside/</a><br>
+					<a href="mailto:rzkv@mail.ru" subject="Hi!">ppcinside@gmail.com</a><br>
+					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside</a><br>
 				</div>
 				<div class="cursor"></div>
 			</div>
-		</div>  
+		</div>
 	</body>
 </html>
