--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		    <p>READY.</p> -->
 			<!-- <div class="img"><img src="/img/fb2.jpg" height="200px" width="200px" /></div> -->
 			<div class="info">
-				<h1 class="glitch" data-text="HELLO">HELLO<br></h1>
+				<h1 class="glitch" data-text="hello">hello<br></h1>
 				<!-- <div class="info_subtitle">dev/design</div> -->
 				<div class="links">
 					<a href="mailto:rzkv@mail.ru" subject="Hi!">ppcinside@gmail.com</a><br>
