--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<h1 class="glitch" data-text="hello">hello<br></h1>
 				<!-- <div class="info_subtitle">dev/design</div> -->
 				<div class="links">
-					<a href="mailto:rzkv@mail.ru" subject="Hi!">ppcinside@gmail.com</a><br>
+					<a href="mailto:ppcinside@gmail.com" subject="Hi!">ppcinside@gmail.com</a><br>
 					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside</a><br>
 				</div>
 				<div class="cursor"></div>
