--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 				<div class="links">
 					<a href="mailto:ppcinside@gmail.com" subject="Hi!">ppcinside@gmail.com</a><br>
 					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside</a><br>
+					<a href="http://last.fm/user/ppcinside" target="_blank">last.fm/user/ppcinside</a><br>
 				</div>
 				<div class="cursor"></div>
 			</div>
