--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 				<!-- <div class="info_subtitle">dev/design</div> -->
 				<div class="links">
 					<a href="mailto:ppcinside@gmail.com" subject="Hi!">ppcinside@gmail.com</a><br>
-					<a href="http://vk.com/ppcinside" target="_blank">vk.com/ppcinside</a><br>
+					<a href="http://ppcinside.tumblr.com" target="_blank">ppcinside.tumblr.com</a><br>
+					<a href="http://last.fm/user/ppcinside" target="_blank">last.fm/user/ppcinside</a><br>
+					<a href="http://vk.com/greyxp" target="_blank">vk.com/greyxp</a><br>
+					<a href="http://instagram.com/greyxp" target="_blank">instagram.com/greyxp</a><br>
 				</div>
 				<div class="cursor"></div>
 			</div>
